<resources>
    <string name="app_name">GoZa_TA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="bookmark">Bookmark</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="new_york_ny">New York, NY</string>
    <string name="search">Search</string>
    <string name="popular_categories">Popular Categories</string>
    <string name="recommended">Recommended</string>
    <string name="see_all">See All</string>
    <string name="about_the_trip">About the trip</string>
    <string name="book_now">Book Now</string>
</resources>